# cookiecutter-ml

./: README.md  cookiecutter.json
{{ cookiecutter.repo_name }}/: pod.yml  pyproject.toml
{{ cookiecutter.repo_name }}/.github/workflows/: deploy.yml
