[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.project_version }}"
description = "{{ cookiecutter.project_description }}"
authors = ["{{ cookiecutter.project_author }}"]
readme = "README.md"

[tool.poetry.dependencies]
python = "{{ cookiecutter.python_version }}"
pandas = "^2.2.1"
numpy = "^1.26.4"
scipy = "^1.12.0"
matplotlib = "^3.8.3"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
